--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,5 +1,8 @@
-@import "tailwindcss/base";
+@import "./todomvc-app.css";
+
+/* @import "tailwindcss/base";
 @import "tailwindcss/components";
-@import "tailwindcss/utilities";
+@import "tailwindcss/utilities"; 
+*/
 
 /* This file is for your main application CSS */
