--- a/lib/auth2024_web/live/page_live.html.heex
+++ b/lib/auth2024_web/live/page_live.html.heex
@@ -25,7 +25,7 @@
             <% else %>
               <input class="toggle" type="checkbox" phx-value-id={item.id} phx-click="toggle" />
             <% end %>
-            <label><%= item.text %></label>
+            <label><%= item.content %></label>
             <button class="destroy" phx-click="delete" phx-value-id={item.id}></button>
           </div>
         </li>
