--- a/lib/auth2024_web/live/page_live.html.heex
+++ b/lib/auth2024_web/live/page_live.html.heex
@@ -16,7 +16,7 @@
   <section class="main" style="display: block;">
     <input id="toggle-all" class="toggle-all" type="checkbox" />
     <label for="toggle-all">Mark all as complete</label>
-    <ul class="todo-list">
+    <!-- ul class="todo-list">
         <%= for item <- @items do %>
         <li data-id={item.id} class={completed?(item)}>
           <div class="view">
@@ -30,6 +30,35 @@
           </div>
         </li>
         <% end %>
+    </ul -->
+    <ul class="todo-list" id="todo-list-items">
+      <%= for item <- @items do %>
+        <%= if item.id == @editing do %>
+          <form phx-submit="update-item" id="form-update">
+            <input
+              id="update_todo"
+              class="new-todo"
+              type="text"
+              name="text"
+              required="required"
+              value={item.caption}
+            />
+            <input type="hidden" name="id" value={item.id}/>
+          </form>
+        <% else %>
+          <li data-id={item.id} class={completed?(item)}>
+            <div class="view">
+              <%= if checked?(item) do %>
+                <input class="toggle" type="checkbox" phx-value-id={item.id} phx-click="toggle" checked />
+              <% else %>
+                <input class="toggle" type="checkbox" phx-value-id={item.id} phx-click="toggle" />
+              <% end %>
+              <label phx-click="edit-item" phx-value-id={item.id}><%= item.caption %></label>
+              <button class="destroy" phx-click="delete" phx-value-id={item.id}></button>
+            </div>
+          </li>
+        <% end %>
+      <% end %>
     </ul>
   </section>
   <footer class="footer" style="display: block;">
