- added daisy dependency.

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,6 +1,6 @@
-@import "./todomvc-app.css";
-
-/* @import "tailwindcss/base";
+@import "./todomvc-app.css"; 
+/*
+@import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities"; 
 */
