- i think this is some steps forward.

--- a/lib/auth2024_web/live/page_live.html.heex
+++ b/lib/auth2024_web/live/page_live.html.heex
@@ -32,10 +32,12 @@
             <p class="text-sm font-semibold leading-6 text-gray-900">
             <%= if item.id == @editing do %>
               <form 
-                phx-submit="update-item" 
+                phx-submit="submit-todo-item" 
                 id="form-update">
                 <input
                   phx-mounted={JS.focus()}
+                  phx-change="validate-todo-item"
+                  phx-blur="left-todo-item"
                   id="update_todo"
                   class="text-sm font-semibold leading-6 text-gray-900 border-none"
                   type="text"
