- more similar input fields

--- a/lib/auth2024_web/live/page_live.html.heex
+++ b/lib/auth2024_web/live/page_live.html.heex
@@ -39,7 +39,7 @@
                   phx-change="validate-todo-item"
                   phx-blur={JS.dispatch("submit", to: "#form-todo-item")}
                   id="update_todo"
-                  class="text-sm font-semibold leading-6 text-gray-900 border-none"
+                  class="text-sm font-semibold leading-6 text-gray-900 border-none p-0"
                   type="text"
                   name="text"
                   required="required"
