--- a/lib/auth2024_web/live/page_live.html.heex
+++ b/lib/auth2024_web/live/page_live.html.heex
@@ -51,7 +51,7 @@
               <label phx-click="edit-item" phx-value-id={item.id}><%= item.caption %></label>
             <% end %>
             </p>
-            <p class="mt-1 truncate text-xs leading-5 text-gray-500">Contact Person</p>
+            <p class="mt-1 truncate text-xs leading-5 text-gray-500"><%= item.contact.given_name %> <%= item.contact.family_name %></p>
           </div>
         </li>
       <% end %>
