--- a/lib/auth2024_web/live/page_live.html.heex
+++ b/lib/auth2024_web/live/page_live.html.heex
@@ -38,7 +38,6 @@
                   phx-mounted={JS.focus()}
                   phx-change="validate-todo-item"
                   phx-blur={JS.dispatch("submit", to: "#form-todo-item")}
-                  id="update_todo"
                   class="text-sm font-semibold leading-6 text-gray-900 border-none p-0"
                   type="text"
                   name="text"
@@ -53,6 +52,9 @@
             </p>
             <p class="mt-1 truncate text-xs leading-5 text-gray-500"><%= item.contact.given_name %> <%= item.contact.family_name %></p>
           </div>
+          <input type="date" 
+            class="text-sm font-semibold border-none text-gray-900 sm:text-sm datepicker-input" 
+            value={display_due_date(item)}>
         </li>
       <% end %>
     </ul>
