- triggering a live event.

--- a/lib/auth2024_web/live/page_live.html.heex
+++ b/lib/auth2024_web/live/page_live.html.heex
@@ -61,11 +61,13 @@
             <form 
               phx-submit="submit-todo-item-due" 
               id={form_todo_item_due_id(item)}>
-              <input type="date" 
+              <input 
+                type="date" 
+                name="duedate"
                 class="text-sm font-semibold border-none text-gray-900 sm:text-sm datepicker-input" 
                 phx-change="validate-todo-item-due"
-                phx-blur={JS.dispatch("submit", to: "#form-todo-item-due")}
-                name="duedate"
+                phx-blur={JS.dispatch("submit", to: form_todo_item_due_id(item))}
+                phx-select={JS.dispatch("submit", to: form_todo_item_due_id(item))}
                 value={display_due_date(item)}
               />
               <input type="hidden" name="item_id" value={item.id}/>
