--- a/lib/auth2024_web/live/page_live.html.heex
+++ b/lib/auth2024_web/live/page_live.html.heex
@@ -1,5 +1,7 @@
 
-<.modal id="confirm-new-person">
+<.modal id="confirm-new-person"
+ phx-hook="ModalCloser"
+>
   <Auth2024Web.CoreComponents.header>
     Sure to add new person?
     <:subtitle>
