- lots of visual tweaks.

--- a/lib/auth2024_web/live/page_live.html.heex
+++ b/lib/auth2024_web/live/page_live.html.heex
@@ -31,8 +31,8 @@
   </Auth2024Web.CoreComponents.simple_form>
 </.modal>
 
-<section class="todoapp">
-  <header class="header">
+<section>
+  <header>
     <!--form phx-submit="create" id="form">
       <input
         id="new_todo"
@@ -45,127 +45,122 @@
       />
     </form -->
   </header>
-  <section class="main" style="display: block;">
-    <input id="toggle-all" class="toggle-all" type="checkbox" />
+  <section style="display: block;">
+    <!-- input id="toggle-all" class="toggle-all" type="checkbox" / -->
     <ul role="list" class="divide-y divide-gray-100" id="todo-list-items">
 
-        <li class="flex justify-between gap-x-6 py-5">
-          <div>
-            <input class="toggle" type="checkbox" disabled="true"/>
+        <li class="flex flex-row py-5">
+          <div class="w-8 flex-0">
           </div>
-          <div>
+          <!-- div>
             <button class="destroy" disabled="true">x</button>
-          </div>
-          <div class="min-w-0 flex-auto">
-            <p class="text-sm font-semibold leading-6 text-gray-900">
+          </div -->
+          <div class="flex-1 min-w-0 leading-6 text-gray-900">
+            <div>
               <form
                 phx-submit="create"
                 id="form"
               >
-                <input
-                  class="text-sm font-semibold leading-6 text-gray-900 border-none p-0"
-                  id="new_todo"
-                  class="text-sm font-semibold leading-6 text-gray-900 border-none p-0"
-                  type="text"
-                  name="text"
-                  placeholder="What needs to be done?"
-                  autofocus=""
-                  required="required"                  
-                />
+                <div class="flex">
+                  <input
+                    class="flex-1 focus:bg-yellow-100 focus:ring-0 font-semibold text-sm border-none p-0"
+                    id="new_todo"
+                    type="text"
+                    name="text"
+                    placeholder="Write a new task."
+                    autofocus=""
+                    required="required"                  
+                  />
+                </div>
               </form>
-            </p>
-            <p class="mt-1 truncate text-xs leading-5 text-gray-500">
-                <label>
-                  <%= @current_person.given_name %>
-                </label>
-                <label>
-                  <%= @current_person.family_name %>
-                </label>
-            </p>
+            </div>
           </div>
+          <div class="flex-0 w-28"></div>
         </li>
       <%= for item <- @items do %>
-        <li data-id={item.id} class="flex justify-between gap-x-6 py-5" class={completed?(item)}>
-          <div>
+        <li data-id={item.id} class="flex flex-row py-5" class={completed?(item)}>
+          <div class="w-8 flex-0">
             <%= if checked?(item) do %>
               <input class="toggle" type="checkbox" phx-value-id={item.id} phx-click="toggle" checked />
             <% else %>
               <input class="toggle" type="checkbox" phx-value-id={item.id} phx-click="toggle" />
             <% end %>
           </div>
-          <div>
-            <button class="destroy" phx-click="delete" phx-value-id={item.id}>x</button>
-          </div>
-          <div class="min-w-0 flex-auto">
-            <p class="text-sm font-semibold leading-6 text-gray-900">
+          <div class="flex-1 min-w-0 leading-6 text-gray-900">
+            <div>
               <%= if item.id == @editing_item && @editing_kind == :caption do %>
-                <form 
+                <form
                   phx-submit="submit-todo-item-caption" 
                   id="form-todo-item-caption">
-                  <input
-                    phx-mounted={JS.focus()}
-                    phx-change="validate-todo-item-caption"
-                    phx-blur={JS.dispatch("submit", to: "#form-todo-item-caption")}
-                    class="text-sm font-semibold leading-6 text-gray-900 border-none p-0"
-                    type="text"
-                    name="text"
-                    required="required"
-                    value={item.caption}
-                  />
+                  <div class="flex">
+                    <input
+                      phx-mounted={JS.focus()}
+                      phx-change="validate-todo-item-caption"
+                      phx-blur={JS.dispatch("submit", to: "#form-todo-item-caption")}
+                      class="flex-1 focus:bg-yellow-100 focus:ring-0 font-semibold text-sm border-none p-0"
+                      type="text"
+                      name="text"
+                      required="required"
+                      value={item.caption}
+                    />
+                  </div>
                   <input type="hidden" name="id" value={item.id}/>
                 </form>
               <% else %>
-                <label phx-click="edit-item-caption" phx-value-id={item.id}>
+                <label 
+                  class="font-semibold text-sm margin-1 text-nowrap" 
+                  phx-click="edit-item-caption" phx-value-id={item.id}
+                >
                   <%= item.caption %>
                 </label>
               <% end %>
-            </p>
-            <p class="mt-1 truncate text-xs leading-5 text-gray-500">
-              <%= if item.id == @editing_item && @editing_kind == :contact do %>
-                <form
-                  phx-submit="submit-todo-item-contact" 
-                  id="form-todo-item-contact">
-                  <label>
+              <p class="mt-1 truncate text-xs leading-5 text-gray-500">
+                <%= if item.id == @editing_item && @editing_kind == :contact do %>
+                  <form
+                    phx-submit="submit-todo-item-contact" 
+                    id="form-todo-item-contact">
+                    <label class="margin-1">
+                      <%= item.contact.given_name %>
+                    </label>
+                    <input
+                      phx-mounted={JS.focus()}
+                      phx-change="validate-todo-item-contact"
+                      phx-blur="revert-todo-item-contact"
+                      phx-key="escape"
+                      phx-keydown="revert-todo-item-contact"
+                      class="text-xs focus:bg-yellow-100 focus:ring-0 leading-5 border-none p-0"
+                      type="text"
+                      name="text"
+                      required="required"
+                      list="input-todo-item-contact"
+                      value={item.contact.family_name}
+                    />
+                    <datalist id="input-todo-item-contact">
+                      <%= for contact <- @editing_item_datalist do %>
+                        <option value={contact.family_name}><%= contact.family_name %></option>
+                      <% end %>
+                    </datalist>
+                    <input type="hidden" name="id" value={item.id}/>
+                  </form>
+                <% else %>
+                  <label class="border-1">
                     <%= item.contact.given_name %>
                   </label>
-                  <input
-                    phx-mounted={JS.focus()}
-                    phx-change="validate-todo-item-contact"
-                    phx-blur="revert-todo-item-contact"
-                    phx-key="escape"
-                    phx-keydown="revert-todo-item-contact"
-                    class="text-sm leading-5 border-none p-0"
-                    type="text"
-                    name="text"
-                    required="required"
-                    list="input-todo-item-contact"
-                    value={item.contact.family_name}
-                  />
-                  <datalist id="input-todo-item-contact">
-                    <%= for contact <- @editing_item_datalist do %>
-                      <option value={contact.family_name}><%= contact.family_name %></option>
-                    <% end %>
-                  </datalist>
-                  <input type="hidden" name="id" value={item.id}/>
-                </form>
-              <% else %>
-                <label>
-                  <%= item.contact.given_name %>
-                </label>
-                <label phx-click="edit-item-contact" phx-value-id={item.id}>
-                  <%= item.contact.family_name %>
-                </label>
-              <% end %>
-            </p>
+                  <label class="border-1" phx-click="edit-item-contact" phx-value-id={item.id}>
+                    <%= item.contact.family_name %>
+                  </label>
+                <% end %>
+              </p>
+            </div>
           </div>
-          <div>
+          <div class="flex-0">
             <form 
               phx-submit="submit-todo-item-due" 
               id={form_todo_item_due_id(item)}>
               <input 
                 type="date" 
                 name="duedate"
-                class="text-sm font-semibold border-none text-gray-900 sm:text-sm" 
+                class="w-28 text-xs border-none text-gray-900 sm:text-sm" 
                 phx-change="validate-todo-item-due"
                 phx-blur={JS.dispatch("submit", to: "#" <> form_todo_item_due_id(item))}
                 phx-select={JS.dispatch("submit", to: "#" <> form_todo_item_due_id(item))}
