--- a/lib/auth2024_web/components/layouts/app.html.heex
+++ b/lib/auth2024_web/components/layouts/app.html.heex
@@ -1,8 +1,8 @@
 <header class="px-4 sm:px-6 lg:px-8">
 
 </header>
-<main class="px-4 py-20 sm:px-6 lg:px-8">
-  <div class="mx-auto max-w-2xl">
+<main class="">
+  <div class="mx-auto md:max-w-xl">
     <.flash_group flash={@flash} />
     <%= @inner_content %>
   </div>
