--- a/lib/auth2024_web/components/layouts/root.html.heex
+++ b/lib/auth2024_web/components/layouts/root.html.heex
@@ -12,15 +12,16 @@
     </script>
   </head>
   <body class="bg-white antialiased">
-    <ul class="relative z-10 flex items-center gap-4 px-4 sm:px-6 lg:px-8 justify-end">
+    <ul class="relative z-10 flex items-center gap-4 p-0 sm:px-6 lg:px-8 justify-end">
       <%= if @current_user do %>
-        <li class="text-[0.8125rem] leading-6 text-zinc-900">
+        <li class="w-4"></li>
+        <li class="text-xs leading-5 text-gray-600">
           <%= @current_user.email %>
         </li>
         <li>
           <.link
             href={~p"/users/settings"}
-            class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700"
+            class="text-xs leading-5 text-gray-600 font-semibold hover:text-zinc-700"
           >
             Settings
           </.link>
@@ -29,7 +30,7 @@
           <.link
             href={~p"/users/log_out"}
             method="delete"
-            class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700"
+            class="text-xs leading-5 text-gray-600 font-semibold hover:text-zinc-700"
           >
             Log out
           </.link>
@@ -54,13 +55,13 @@
         <li>
           <.link
             href={~p"/auth/github"}
-            class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700"
+            class="text-[0.8125rem] leading-5 text-zinc-900 font-semibold hover:text-zinc-700"
           >
             Log in with Github
           </.link>
         </li>
-
       <% end %>
+        <li>&nbsp;</li>
     </ul>
     <%= @inner_content %>
   </body>
